# synth-clinic-lit

./: PMC5389857.xml  README.md  convert_JSON_2_CSV.sbatch  extract.sbatch  extract_from_text_file.sbatch  extractions2.json  meta-analysis_extractions.json  meta-analysis_extractions2.json  pyproject.toml  requirements.txt
articles/: PMC11496926.xml  PMC7358111.xml
examples/: digital_health_indicator.json  example_usage.py  meta_analysis.json  schema_clinical_trial.json  schema_collection_meta.json
synthclinclit/: __init__.py  backends.py  cli.py  config.py  downloader.py  evaluator.py  extractor.py  id_resolver.py  parser.py
